<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hide and seek</string>

    <string name="players_in_game_title">Players in game</string>
    <string name="start_game_title">Start game</string>
    <string name="ble_level_title">Approach scale</string>

    <string name="who_is_you">You will…</string>
    <string name="who_is_looking">Search</string>
    <string name="who_is_hiding">Hide</string>

    <string name="my_device_state_title_text">Status of your %s device:</string>

    <string name="my_device_state_connect_to_me_success">Other users can connect to you.</string>
    <string name="my_device_state_connect_to_me_failed">Other users cannot connect to you. Click to get more info.</string>

    <string name="connected_device_location_sending_text">You share your location with the interlocutor.</string>
    <string name="connected_device_location_not_sending_text">Your location is unknown. Click to get more info.</string>

    <string name="finded_nearby_user_base_info">Now in touch %s</string>
    <!-- TODO: перейти на Plurals -->
    <string name="finded_nearby_user_detail_info">, is %s meters away from you</string>

    <string name="start_search_nearby_title_text">Find players</string>
    <string name="stop_search_nearby_title_text">Stop search</string>

    <string name="already_invited">Invitation already sent!</string>
    <string name="player_disconnected">Player %s has left the game.</string>

    <string name="player_hiding">The player is still hiding</string>
    <string name="player_hid">The player hid</string>
    <string name="player_invite_send">The invitation is sent</string>
    <string name="player_is_empty_title">Player list is empty</string>

    <string name="player_was_hide_btn_text">I hid</string>
    <string name="player_was_found_btn_text">I was found</string>

    <string name="player_bird_sound_on_title_text">Whoops… where is that noise coming from?</string>
    <string name="player_bird_sound_off_title_text">You hid, sit still!</string>

    <string name="player_waiting_game_start_search_server">Ready to play</string>
    <string name="player_waiting_game_stop_search_server">Stop waiting for an invitation</string>

    <string name="player_waiting_game_invite_waiting">To play with other players, you must receive an invitation from the server</string>
    <string name="player_waiting_game_invite_in_progress">Please wait for an invitation from the server</string>
    <string name="player_waiting_game_invite_obtained">Invitation received, hide!</string>
    <string name="player_waiting_game_invite_waiting_all_hide">Wait for everyone to hide</string>

    <string name="fatal_send_data_error">An error occurred while transmitting data</string>

    <string name="dialog_questions_drop_connect">Do you want to stop communicating with this device?</string>

    <string name="dialog_error_players_connect_failure">Failed to invite %s to the game</string>
    <string name="dialog_error_players_is_empty">Hide and seek is not played alone, add players.</string>
    <string name="dialog_error_not_all_players_hid">Wait until all players hide.</string>
    <string name="dialog_error_player_not_sing">Failed to make the remote device "sing".</string>
    <string name="dialog_error_player_not_visible">An error occurred while trying to allow third-party connections.</string>
    <string name="dialog_error_send_event_failure">Failed to notify game master</string>
    <string name="dialog_error_device_name_to_large">The name of your Bluetooth device is too long, you are now an Unknown player</string>

    <string name="dialog_error_default_yes">Yes</string>
    <string name="dialog_error_default_no">No</string>

    <string name="dialog_error_start_socket_server">Alas, it was not possible to start the server for connecting third-party devices, because of this, other users will not be able to connect to you (you can). Let\'s try to fix it?</string>
    <string name="dialog_error_start_socket_server_yes">Yes, let\'s fix it</string>
    <string name="dialog_error_start_socket_server_no">No, leave as is</string>

    <string name="dialog_error_bluetooth_disabled">Alas, Bluetooth turned off does not allow us to continue working..</string>
    <string name="dialog_error_gps_disabled">Unfortunately, turning off GPS does not allow us to search for nearby devices.</string>

    <string name="dialog_info_sercer_connection_loss">Server connection lost</string>
    <string name="dialog_info_game_question_rejected">The game will be completed. Do you want to go out?</string>
    <string name="dialog_info_game_was_rejected">Unfortunately, the game was interrupted by the creator.</string>
    <string name="dialog_info_looking_man_win">Congratulations, you\'ve found everyone hiding!\n\nSee you again, goodbye!</string>
    <string name="dialog_info_player_was_found">You have found player %s</string>
    <string name="dialog_info_player_was_leave">%s has left the game</string>
    <string name="dialog_info_player_game_over">Game over, you\'ve been discovered!\n\nFarewell!</string>
    <string name="dialog_info_finish_game">Thanks for playing!</string>

    <string name="dialog_info_permission_yes">Set up permissions</string>
    <string name="dialog_info_bluetooth_permission_denied">Alas, without your permission to access information from the Bluetooth module, we will not be able to search for and connect to other devices. Let\'s fix this?</string>

    <string name="dialog_info_gps_permission_yes">Location settings</string>
    <string name="dialog_info_gps_permission_denied">Unfortunately, without your permission to access location, we will not be able to search for nearby devices. Let\'s fix this?</string>

    <string name="dialog_info_record_audio_permission_denied">Without access to a microphone, we won\'t be able to determine the source of the noise.</string>

    <string name="dialog_onboarding_info">
        Hello player!
        \nI\'ll give you a little hint if you\'re having trouble using the app,
        then try to close it, turn on and off the flight mode, and then return to the game.

        \n\nEnjoy your game!
    </string>

</resources>