<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="playerListIsEmpty"
            type="java.lang.Boolean"/>

        <variable
            name="enableSoundRecordUi"
            type="java.lang.Boolean"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/palette_blue_grey_700">

        <TextView
            android:id="@+id/txt_player_in_game"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/palette_blue_grey_900"
            android:gravity="center"
            android:text="@string/players_in_game_title"
            android:textColor="@color/palette_blue_grey_300"
            android:textSize="@dimen/large_text_size_scale_on"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_players_in_game"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/palette_blue_grey_700"
            app:layout_constraintBottom_toTopOf="@+id/view_sound_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_player_in_game"
            app:isVisible="@{!playerListIsEmpty}"
            tools:itemCount="4"
            tools:listitem="@layout/item_players_in_game"
            tools:visibility="gone"/>

        <ImageView
            android:id="@+id/img_zero_players"
            android:layout_width="@dimen/large_image_icon_size"
            android:layout_height="@dimen/large_image_icon_size"
            android:src="@drawable/ic_players_not_yet"
            app:isVisible="@{playerListIsEmpty}"
            app:layout_constraintBottom_toTopOf="@+id/txt_zero_players"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_player_in_game"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/palette_blue_grey_100"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/txt_zero_players"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:gravity="center"
            android:text="@string/player_is_empty_title"
            android:textColor="@color/palette_blue_grey_100"
            android:textSize="@dimen/large_text_size_scale_on"
            android:textStyle="italic"
            app:isVisible="@{playerListIsEmpty}"
            app:layout_constraintBottom_toTopOf="@+id/view_sound_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_zero_players"/>

        <View
            android:id="@+id/view_sound_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_padding_half"
            android:layout_marginBottom="@dimen/default_padding_half"
            android:background="@color/palette_blue_grey_900"
            app:layout_constraintBottom_toTopOf="@+id/divider_bottom_barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.github.rezaiyan.levelprogressbar.LevelProgressBar
            android:id="@+id/nearby_sound_progress"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:isVisible="@{enableSoundRecordUi}"
            app:layout_constraintBottom_toTopOf="@+id/txt_blue_level_title"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:spb_background_color="@color/palette_ble_level_1"
            app:spb_is_enable="false"
            app:spb_is_step_progress="true"
            app:spb_level="level1"
            app:spb_text_level_color="@color/palette_white_text_color"
            app:spb_text_title_color="#000000"
            app:spb_unprogress_color="@color/palette_blue_grey_50"/>

        <TextView
            android:id="@+id/txt_blue_level_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ble_level_title"
            android:textSize="@dimen/default_text_size_scale_on"
            android:textStyle="bold"
            app:isVisible="@{enableSoundRecordUi}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlSymmetry"/>

        <ProgressBar
            android:id="@+id/noise_level_progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/default_padding_half"
            android:max="70"
            android:paddingHorizontal="@dimen/default_padding_half"
            android:progress="50"
            android:progressDrawable="@drawable/vertical_progress_bar"
            app:isVisible="@{enableSoundRecordUi}"
            app:layout_constraintBottom_toTopOf="@+id/img_sound_volume"
            app:layout_constraintEnd_toEndOf="@+id/img_sound_volume"
            app:layout_constraintStart_toStartOf="@+id/img_sound_volume"
            app:layout_constraintTop_toTopOf="@+id/nearby_sound_progress"/>

        <ImageView
            android:id="@+id/img_sound_volume"
            android:layout_width="@dimen/default_image_icon_size"
            android:layout_height="@dimen/default_image_icon_size"
            android:layout_marginEnd="@dimen/default_padding_half"
            android:src="@drawable/ic_sound_volume"
            app:isVisible="@{enableSoundRecordUi}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/palette_blue_grey_100"
            tools:ignore="ContentDescription,MissingConstraints"/>

        <Button
            android:id="@+id/btn_start_game"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/default_padding"
            android:background="@drawable/background_talk_btn"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/start_game_title"
            android:textColor="@color/palette_white_text_color"
            android:textSize="@dimen/talk_btn_title_text_size"
            app:autoSizeMaxTextSize="@dimen/talk_btn_title_text_size"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_sound_divider"
            app:layout_constraintWidth_percent="0.5"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/divider_bottom_barrier"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:barrierDirection="top"
            app:constraint_referenced_ids="nearby_sound_progress,btn_start_game"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>